--- a/Data/Data.csproj
+++ b/Data/Data.csproj
@@ -50,11 +50,18 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="EntityEFClass.cs" />
+    <Compile Include="DonVi.cs">
+      <DependentUpon>EntityEFISB.tt</DependentUpon>
+    </Compile>
     <Compile Include="EntityEFISB.Context.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
       <DependentUpon>EntityEFISB.Context.tt</DependentUpon>
+    </Compile>
+    <Compile Include="EntityEFISB.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>EntityEFISB.tt</DependentUpon>
     </Compile>
     <Compile Include="EntityEFISB.Designer.cs">
       <AutoGen>True</AutoGen>
@@ -62,6 +69,9 @@
       <DependentUpon>EntityEFISB.edmx</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="user.cs">
+      <DependentUpon>EntityEFISB.tt</DependentUpon>
+    </Compile>
   </ItemGroup>
   <ItemGroup>
     <EntityDeploy Include="EntityEFISB.edmx">
@@ -80,6 +90,12 @@
     <Content Include="EntityEFISB.Context.tt">
       <Generator>TextTemplatingFileGenerator</Generator>
       <LastGenOutput>EntityEFISB.Context.cs</LastGenOutput>
+      <DependentUpon>EntityEFISB.edmx</DependentUpon>
+    </Content>
+    <Content Include="EntityEFISB.tt">
+      <Generator>TextTemplatingFileGenerator</Generator>
+      <DependentUpon>EntityEFISB.edmx</DependentUpon>
+      <LastGenOutput>EntityEFISB.cs</LastGenOutput>
     </Content>
   </ItemGroup>
   <ItemGroup>
