--- a/Repository/Repository.csproj
+++ b/Repository/Repository.csproj
@@ -56,6 +56,10 @@
     <Compile Include="Infrastructure\Interface\IRepositoryBase.cs" />
     <Compile Include="Infrastructure\Interface\IUnitOfWork.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Repository\Implement\DonviRepository.cs" />
+    <Compile Include="Repository\Implement\UserRepository.cs" />
+    <Compile Include="Repository\Interface\IDonviRepository.cs" />
+    <Compile Include="Repository\Interface\IUserRepository.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Data\Data.csproj">
@@ -63,10 +67,7 @@
       <Name>Data</Name>
     </ProjectReference>
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Repository\Implement\" />
-    <Folder Include="Repository\Interface\" />
-  </ItemGroup>
+  <ItemGroup />
   <ItemGroup>
     <None Include="App.config" />
     <None Include="packages.config" />
