--- a/Service/Service.csproj
+++ b/Service/Service.csproj
@@ -118,7 +118,9 @@
   <ItemGroup>
     <Compile Include="AutoMapper\AutoMapperConfiguration.cs" />
     <Compile Include="AutoMapper\MappingProfile.cs" />
+    <Compile Include="Implement\DonViService.cs" />
     <Compile Include="Implement\UserService.cs" />
+    <Compile Include="Interface\IDonViService.cs" />
     <Compile Include="Interface\IUserService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
