--- a/Data/App.Config
+++ b/Data/App.Config
@@ -5,7 +5,7 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="ISBEntities" connectionString="metadata=res://*/EntityEFISB.csdl|res://*/EntityEFISB.ssdl|res://*/EntityEFISB.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=server_hp;initial catalog=ISB;user id=sa;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="ISBEntities" connectionString="metadata=res://*/EntityEFISB.csdl|res://*/EntityEFISB.ssdl|res://*/EntityEFISB.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=SERVER_HP;initial catalog=ISB;user id=sa;password=sa;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
