--- a/ISBMvc/ISBMvc.csproj
+++ b/ISBMvc/ISBMvc.csproj
@@ -192,6 +192,8 @@
     <Content Include="Views\Home\Index.cshtml" />
     <Content Include="Views\User\Index.cshtml" />
     <Content Include="Views\DonVi\Index.cshtml" />
+    <Content Include="Views\DonVi\Insert.cshtml" />
+    <Content Include="Views\DonVi\Update.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
