--- a/Service.Test/Service.Test.csproj
+++ b/Service.Test/Service.Test.csproj
@@ -84,6 +84,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DonViServiceTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="UserServiceTest.cs" />
   </ItemGroup>
