--- a/Data/Data.csproj
+++ b/Data/Data.csproj
@@ -68,10 +68,19 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>EntityEFISB.edmx</DependentUpon>
     </Compile>
+    <Compile Include="Get_LoaiTaiLieu_Result.cs">
+      <DependentUpon>EntityEFISB.tt</DependentUpon>
+    </Compile>
+    <Compile Include="loaitailieu.cs">
+      <DependentUpon>EntityEFISB.tt</DependentUpon>
+    </Compile>
     <Compile Include="loaivanban.cs">
       <DependentUpon>EntityEFISB.tt</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="tailieu.cs">
+      <DependentUpon>EntityEFISB.tt</DependentUpon>
+    </Compile>
     <Compile Include="user.cs">
       <DependentUpon>EntityEFISB.tt</DependentUpon>
     </Compile>
