--- a/Data/Data.csproj
+++ b/Data/Data.csproj
@@ -50,6 +50,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Banhanhvb.cs">
+      <DependentUpon>EntityEFISB.tt</DependentUpon>
+    </Compile>
     <Compile Include="DonVi.cs">
       <DependentUpon>EntityEFISB.tt</DependentUpon>
     </Compile>
@@ -74,11 +77,17 @@
     <Compile Include="loaitailieu.cs">
       <DependentUpon>EntityEFISB.tt</DependentUpon>
     </Compile>
+    <Compile Include="loaitin.cs">
+      <DependentUpon>EntityEFISB.tt</DependentUpon>
+    </Compile>
     <Compile Include="loaivanban.cs">
       <DependentUpon>EntityEFISB.tt</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="tailieu.cs">
+      <DependentUpon>EntityEFISB.tt</DependentUpon>
+    </Compile>
+    <Compile Include="theloai.cs">
       <DependentUpon>EntityEFISB.tt</DependentUpon>
     </Compile>
     <Compile Include="user.cs">
