--- a/DTO/DTO.csproj
+++ b/DTO/DTO.csproj
@@ -41,12 +41,15 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="BanhanhvbDTO.cs" />
     <Compile Include="DonViDTO.cs" />
     <Compile Include="GetLoaiTaiLieuDTO.cs" />
     <Compile Include="LoaiTaiLieuDTO.cs" />
+    <Compile Include="LoaiTinDTO.cs" />
     <Compile Include="LoaiVanBanDTO.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TaiLieuDTO.cs" />
+    <Compile Include="TheLoaiDTO.cs" />
     <Compile Include="UserDTO.cs" />
     <Compile Include="VanBanDTO.cs" />
   </ItemGroup>
