--- a/Service/Service.csproj
+++ b/Service/Service.csproj
@@ -34,6 +34,9 @@
     <Reference Include="AutoMapper, Version=7.0.1.0, Culture=neutral, PublicKeyToken=be96cd2c38ef1005, processorArchitecture=MSIL">
       <HintPath>..\packages\AutoMapper.7.0.1\lib\net45\AutoMapper.dll</HintPath>
     </Reference>
+    <Reference Include="AutoMapper.Extensions.ExpressionMapping, Version=1.0.5.0, Culture=neutral, PublicKeyToken=be96cd2c38ef1005, processorArchitecture=MSIL">
+      <HintPath>..\packages\AutoMapper.Extensions.ExpressionMapping.1.0.5\lib\net45\AutoMapper.Extensions.ExpressionMapping.dll</HintPath>
+    </Reference>
     <Reference Include="AutoMapper.Extensions.Microsoft.DependencyInjection, Version=0.0.0.0, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\packages\AutoMapper.Extensions.Microsoft.DependencyInjection.2.0.1\lib\net451\AutoMapper.Extensions.Microsoft.DependencyInjection.dll</HintPath>
     </Reference>
@@ -118,16 +121,22 @@
   <ItemGroup>
     <Compile Include="AutoMapper\AutoMapperConfiguration.cs" />
     <Compile Include="AutoMapper\MappingProfile.cs" />
+    <Compile Include="Implement\BanHanhVbService.cs" />
     <Compile Include="Implement\DonViService.cs" />
     <Compile Include="Implement\LoaiTaiLieuService.cs" />
+    <Compile Include="Implement\LoaiTinService.cs" />
     <Compile Include="Implement\LoaiVanBanService.cs" />
     <Compile Include="Implement\TaiLieuService.cs" />
+    <Compile Include="Implement\TheLoaiService.cs" />
     <Compile Include="Implement\UserService.cs" />
     <Compile Include="Implement\VanBanService.cs" />
+    <Compile Include="Interface\IBanHanhVbService.cs" />
     <Compile Include="Interface\IDonViService.cs" />
     <Compile Include="Interface\ILoaiTaiLieuService.cs" />
+    <Compile Include="Interface\ILoaiTinService.cs" />
     <Compile Include="Interface\ILoaiVanBanService.cs" />
     <Compile Include="Interface\ITaiLieuService.cs" />
+    <Compile Include="Interface\ITheLoaiService.cs" />
     <Compile Include="Interface\IUserService.cs" />
     <Compile Include="Interface\IVanBanService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
