--- a/Service/packages.config
+++ b/Service/packages.config
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="AutoMapper" version="7.0.1" targetFramework="net46" />
+  <package id="AutoMapper.Extensions.ExpressionMapping" version="1.0.5" targetFramework="net46" />
   <package id="AutoMapper.Extensions.Microsoft.DependencyInjection" version="2.0.1" targetFramework="net46" />
   <package id="Microsoft.DotNet.PlatformAbstractions" version="1.1.1" targetFramework="net46" />
   <package id="Microsoft.Extensions.DependencyInjection.Abstractions" version="1.1.0" targetFramework="net46" />
